--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ name = "pjpipe"
 version = "1.2.0"
 description = "JWST Pipeline Wrapper for Nearby Galaxies"
 readme = "README.md"
-requires-python = ">=3.10"
+requires-python = ">=3.11"
 license = {file = "LICENSE"}
 
 authors = [
@@ -23,9 +23,9 @@ classifiers = [
   # License
   "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
 
-  "Programming Language :: Python :: 3.10",
   "Programming Language :: Python :: 3.11",
   "Programming Language :: Python :: 3.12",
+  "Programming Language :: Python :: 3.13",
 ]
 
 # Just to note for future runs where we might need to update packages. This goes
@@ -38,32 +38,39 @@ classifiers = [
 
 dependencies = [
     "astropy>=6.1.2",
+    "astropy-healpix>=1.1.2",
     "astroquery>=0.4.7",
     "cmocean>=4.0.3",
-    "crds>=11.18.1",
-    "gwcs>=0.21.0",
+    "crds>=12.0.3",
+    "gwcs>=0.24.0",
     "image-registration>=0.2.9",
-    "jwst>=1.15.1",
-    "lmfit>=1.3.2",
+    "jwst>=1.18.0",
+    "lmfit>=1.3.3",
     "matplotlib>=3.9.2",
-    "numpy>=1.26.4,<2",
+    "numpy>=2.2.6",
+    "opencv-python-headless>=4.11.0.86",
     "photutils>=1.13.0",
-    "pypdf>=4.3.1",
+    "pyerfa>=2.0.1.5",
+    "pypdf>=5.6.0",
     "pytest>=8.3.2",
-    "reproject>=0.14.0",
+    "reproject>=0.14.1",
     "requests>=2.32.3",
     "scikit-image>=0.24.0",
     "scipy>=1.14.1",
     "shapely>=2.0.6",
+    "spherical-geometry>=1.3.3",
     "setuptools>=72.2.0",
-    "stdatamodels>=2.0.0",
-    "stwcs>=1.7.3",
+    "stdatamodels>=3.0.2",
+    "stsci.imagestats>=1.8.3",
+    "stsci.stimage>=0.3.0",
+    "stpsf>=2.0.0",
+    "stwcs>=1.7.4",
+    "synphot>=1.5.0",
 #    "spacepylot@git+https://github.com/ejwatkins-astro/spacepylot.git",
     "threadpoolctl>=3.5.0",
     "tomli>=2.0.1",
     "tqdm>=4.66.5",
-    "tweakwcs>=0.8.8",
-    "webbpsf>=1.3.0",
+    "tweakwcs>=0.8.10",
 ]
 
 [project.optional-dependencies]
